--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
-*{
+* {
     font-family: Arial, Helvetica, sans-serif;
     padding: 0;
-    margin:0;  
+    margin: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
 }
-main{
+
+main {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,45 +20,103 @@ main{
     width: 100%;
     gap: 2rem;
 }
-main p{
+
+main p {
     font-size: 3rem;
     font-weight: bold;
 }
-main #buttonS{
+
+main #buttonS {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: center;
     gap: 2rem;
 }
-#buttonPlus, #buttonMinus{
+
+#buttonPlus,
+#buttonMinus {
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
 }
-main #buttonPlus button, #buttonMinus button{
+
+main #buttonPlus button {
     outline: none;
     height: 10rem;
     width: 10rem;
-    border: 4px solid black;
+    border: 4px solid #66171e;
     cursor: pointer;
 }
-#buttonMinus p, #buttonPlus p{
+
+#buttonMinus button {
+    outline: none;
+    height: 10rem;
+    width: 10rem;
+    border: 4px solid #66171e;
+    cursor: pointer;
+}
+
+#buttonMinus p,
+#buttonPlus p {
     font-size: 1rem;
 }
-#buttonId{
-    background-color:green;
+
+#buttonId {
+    background-color: rgb(242, 73, 138);
 }
+
 #buttonIdMinus {
-    background-color: red;
+    background-color: rgb(238, 47, 63);
     color: white;
 }
 
 
 #buttonId:active {
-    background-color: darkgreen;
+    background-color: #D61E69;
 }
-#buttonIdMinus:active{
-    background-color: darkred;
+
+#buttonIdMinus:active {
+    background-color: rgb(175, 21, 34);
+}
+
+#imagemDonut {
+    display: flex;
+    position: absolute;
+    z-index: -1;
+    align-items: center;
+    justify-content: center;
+}
+
+#imagemDonut svg {
+    width: 50%;
+}
+
+div>p {
+    color: white;
+}
+
+.contagemClass {
+    background-color: #E2A050;
+    margin: 1rem 0px;
+    padding: 1rem;
+    border: #66171e solid 4px;
+    border-radius: 6px;
+}
+
+.Ativado {
+    animation-name: pulsar;
+    animation-duration: 2s;
+    animation-timing-function: cubic-bezier(0.68, -0.55, 0.27, 1.55);
+}
+
+@keyframes pulsar {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.3);
+    }
 }
