--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
+    background-color: #774a42;
 }
 
 main {
@@ -19,6 +20,7 @@ main {
     justify-content: center;
     width: 100%;
     gap: 2rem;
+    
 }
 
 main p {
@@ -29,11 +31,13 @@ main p {
 main #buttonS {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     gap: 2rem;
 }
-
+main #buttonPlus{
+    justify-content: center;
+}
 #buttonPlus,
 #buttonMinus {
     display: flex;
@@ -44,9 +48,8 @@ main #buttonS {
 
 main #buttonPlus button {
     outline: none;
-    height: 10rem;
     width: 10rem;
-    border: 4px solid #66171e;
+    border: none;
     cursor: pointer;
 }
 
@@ -64,17 +67,21 @@ main #buttonPlus button {
 }
 
 #buttonId {
-    background-color: rgb(242, 73, 138);
+    background:none;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    align-items: center;
+    justify-content: center;
+}
+#buttonId #count p{
+    font-size: 3rem;
+    font-weight: bold;
 }
 
 #buttonIdMinus {
     background-color: rgb(238, 47, 63);
     color: white;
-}
-
-
-#buttonId:active {
-    background-color: #D61E69;
 }
 
 #buttonIdMinus:active {
@@ -83,14 +90,14 @@ main #buttonPlus button {
 
 #imagemDonut {
     display: flex;
-    position: absolute;
-    z-index: -1;
+    height: 20%;
     align-items: center;
     justify-content: center;
 }
 
 #imagemDonut svg {
-    width: 50%;
+    height: 100%;
+    width: 100%;
 }
 
 div>p {
@@ -104,19 +111,43 @@ div>p {
     border: #66171e solid 4px;
     border-radius: 6px;
 }
-
-.Ativado {
-    animation-name: pulsar;
-    animation-duration: 2s;
-    animation-timing-function: cubic-bezier(0.68, -0.55, 0.27, 1.55);
+#buttonPlus .contagemClass{
+    margin: 2rem 0;
 }
-
+.Ativado {
+    animation:pulsar 1s ease 0s;
+}
 @keyframes pulsar {
-    0% {
-        transform: scale(1);
-    }
-
-    50% {
-        transform: scale(1.3);
-    }
+   0%{
+    animation-timing-function: ease-out;
+    transform: scale(100%);
+   }
+   20%{
+    animation-timing-function: ease-in;
+    transform: scale(130%); 
+   }
+   50%{
+    animation-timing-function: ease-in;
+    transform: scale(118%);
+   }
+   68%{
+    animation-timing-function: ease-in;
+    transform: scale(112%);
+   }
+   82%{
+    animation-timing-function: ease-in;
+    transform: scale(108%);
+   }
+   98%{    
+    animation-timing-function: ease-in;
+    transform: scale(105%);
+   }
+   25%,
+   55%,
+   75%,
+   90%,
+   100%{
+    animation-timing-function: ease-out;
+    transform: scale(100%); 
+   }
 }
