--- a/style.css
+++ b/style.css
@@ -55,8 +55,9 @@ main #buttonPlus button {
 
 #buttonMinus button {
     outline: none;
-    height: 10rem;
+    height: 7rem;
     width: 10rem;
+    border-radius: 30px;
     border: 4px solid #66171e;
     cursor: pointer;
 }
@@ -76,6 +77,7 @@ main #buttonPlus button {
 }
 #buttonId #count p{
     font-size: 3rem;
+    color: white;
     font-weight: bold;
 }
 
