--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ div>p {
 }
 
 .contagemClass {
-    background-color: #E2A050;
+    background-color: #77271c;
     margin: 1rem 0px;
     padding: 1rem;
     border: #66171e solid 4px;
